# llm-cbt-technique

./: README.md  main.py  pyproject.toml  run_server.py
backend/: __init__.py
backend/api/: routes.py
backend/config/: settings.py
backend/models/: __init__.py  schemas.py
backend/services/: ai_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
