[project]
name = "cbt-therapy-assistant"
version = "0.1.0"
description = "AI-powered CBT therapy assistant using FastAPI and Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "ollama>=0.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]
